# gsm-symbolic-benchmarking

./: .gitignore  README.md  environment-cpu.yml  environment-cuda.yml  environment.yml  pyproject.toml  setup.R
misc/: benchmark.py  benchmark_reproduction_claude.py  fix_code_results.py
notebooks/: babbler_analysis.ipynb  benchmark_experiments.ipynb  benchmark_reproduction.ipynb  claude_reproduction.ipynb  first.ipynb  prompting_experiments.ipynb  results_explorer.ipynb  results_pres.ipynb  scratchpad.ipynb
notebooks/results_pres/: 2025-11-19.ipynb  2025-12-03.ipynb  2025-12-15.ipynb  2026-01-14.ipynb  2026-02-11.ipynb  2026-02-25.ipynb  2026-04-24.ipynb  code_errors.ipynb  comparison_to_Mirzadeh.ipynb  mirzadeh-data.json  new.ipynb
src/gsm_benchmarker/: answer_extractor.py  api_model_wrapper.py  base_model_wrapper.py  benchmark.py  benchmark_config.py  dataset_wrapper.py  evaluation.py  hf_model_evaluator.py  hf_model_wrapper.py  model_evaluator.py  model_wrapper.py  models_config_parser.py  prompt_config.py  results_analyser.py  shot_manager.py
src/gsm_benchmarker/benchmark/: answer_extractor.py  benchmark.py  benchmark_config.py  model_evaluator.py
src/gsm_benchmarker/input_data_management/: dataset_wrapper.py  prompt_config.py  shot_manager.py
src/gsm_benchmarker/model_wrappers/: __init__.py  api_model_wrapper.py  base_model_wrapper.py  hf_model_wrapper.py
src/gsm_benchmarker/resources/: machines_config.json  original-models-config.json  python_8shot_solutions.py  standard-8-shots.json
src/gsm_benchmarker/resources/prompt-formats/: code-output-no-sep-no-variables.json  code-output-no-sep-short.json  code-output-no-sep.json  code-output-separated-target.json  code-output.json  default.json  formalised.json  no-step-by-step.json  nonformalised.json  separated-target-thinking-trigger.json  separated-target.json  visual-separated-target.json
src/gsm_benchmarker/resources/solutions_8shot/: formalised.py  nonformalised.py  python_functions.py  python_functions_no_variables.py  python_functions_short.py
src/gsm_benchmarker/results_analyser/: __init__.py  babblers.py  common.py  model.py  multi_model.py  multi_variant_multi_model.py  plotting_utils.py  prompt_effect_analyser.py  prompt_result.py  utils.py
src/gsm_benchmarker/scripts/: benchmark.py
src/gsm_benchmarker/utils/: logging_setup.py  path_ops.py  resources_manager.py  seeds.py
src/tests/: conftest.py
src/tests/test_gsm_benchmarker/: test_answer_extractor.py  test_benchmark_config.py  test_model_evaluator.py  test_prompt_config.py  test_shot_manager.py  tets_prompt_config.py
src/tests/test_gsm_benchmarker/test_scripts/: test_benchmark_initialisation.py
