[project]
name = "gsm_benchmarker"
version = "0.0.1"
authors = [
  { name="Dominika Dlugosz", email="dominika.a.m.dlugosz@gmail.com" }
]
description = "Reproducing and extending GSM-Symbolic benchmark"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "accelerate>=1.11.0",
  "anthropic>=0.71.0",
  "datasets>=4.2.0",
  "google-genai>=1.45.0",
  "ipywidgets>=8.1.7",
  "notebook>=7.4.7",
  "numpy>=2.3.4",
  "openai>=2.6.0",
  "pandas>=2.3.3",
  "psutil>=7.1.1",
  "torch>=2.7.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[project.urls]
"Homepage" = "https://github.com/the-mysh/gsm-symbolic-benchmarking"
