[project]
name = "gsm_benchmarker"
version = "0.0.1"
authors = [
  { name="Dominika Dlugosz", email="dominika.a.m.dlugosz@gmail.com" }
]
description = "Reproducing and extending GSM-Symbolic benchmark"
readme = "README.md"
requires-python = "==3.12.*"  # for now, to keep consistent with current remote version (on the cluster)
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "accelerate",
  "anthropic",
  "bitsandbytes",
  "coloredlogs",
  "datasets",
  "google-genai",
  "ipywidgets",
  "notebook",
  "numpy",
  "openai",
  "pandas",
  "psutil",
  "pytest",
  "torch>=2.7.0",
  "tqdm",
  "transformers",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[project.urls]
"Homepage" = "https://github.com/the-mysh/gsm-symbolic-benchmarking"
