[project]
name = "gsm_benchmarker"
version = "0.0.1"
authors = [
  { name="Dominika Dlugosz", email="dominika.a.m.dlugosz@gmail.com" }
]
description = "Reproducing and extending GSM-Symbolic benchmark"
readme = "README.md"
requires-python = "==3.12.*"  # for now, to keep consistent with current remote version (on the cluster)
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "accelerate",
  "bitsandbytes",
  "coloredlogs",
  "datasets",
  "einops",
  "ipywidgets",
  "matplotlib>=3.10.7",
  "notebook",
  "numpy",
  "packaging",
  "pandas",
  "protobuf",
  "psutil",
  "python-dotenv",
  "sentencepiece",
  "tiktoken",
  "torch>=2.7.0", # using 2.9.0+cu126
  "tqdm",
  "transformers>=4.51", # using 4.57.1
]

[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-mock"
]
api_models = [
  "openai",
  "anthropic",
  "google-genai"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[project.urls]
"Homepage" = "https://github.com/the-mysh/gsm-symbolic-benchmarking"
